[tool.poetry]
name = "simple-web"
version = "0.1.0"
description = ""
authors = ["ryku"]
readme = "README.md"
packages = [{include = "simple_web"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
